# AbandonedIcebox

./: .gitmodules  .nvimrc  CMakeLists.txt
application/: main.cpp
disassembler/: CMakeLists.txt
disassembler/include/disassembler/: disassembler.hpp  instruction.hpp  instruction_set_architecture.hpp
disassembler/source/: cs_adapter.cpp  cs_adapter.hpp  disassembler.cpp
disassembler/source/test/: disassembler_test.cpp
include/grev/: execution_path.hpp  machine_environment.hpp  machine_process.hpp  machine_processor.hpp  machine_program.hpp
include/grev-lift/: reil_disassembler.hpp
include/grev-load/: pe_loader.hpp
modules/: CMakeLists.txt
modules/disassembler/: CMakeLists.txt  architecture.hpp  disassembler.hpp  instruction.hpp
modules/disassembler/source/: cs_adapter.cpp  disassembler.cpp  instruction.cpp
modules/loader/: CMakeLists.txt  executable.hpp  loader.hpp  virtual_data.hpp
modules/loader/source/: executable.cpp  helper.hpp  loader.cpp  pe_binary.cpp  pe_loader.cpp  pe_loader.hpp  virtual_data.cpp
source/grev/: machine_environment.cpp  machine_process.cpp  machine_program.cpp
source/grev-lift/: reil_disassembler.cpp
source/grev-load/: pe_loader.cpp  reinterpret_copy.hpp  reinterpret_copy.tpp
source/grev-load/pe/: pe_header.cpp  pe_header.hpp
source/grev-load/pe/header/: pe_coff_header.cpp  pe_coff_header.hpp  pe_dos_header.cpp  pe_dos_header.hpp  pe_optional_header.cpp  pe_optional_header.hpp  pe_section_header.cpp  pe_section_header.hpp
submodules/: CMakeLists.txt
template/grev/: machine_process.tpp  machine_processor.tpp  machine_program.tpp
test/: CMakeLists.txt
test/disassembler/: disassembler_test.cpp
test/grev/: test_machine_process.cpp  test_machine_processor.cpp
test/grev-lift/: test_reil_disassembler.cpp
test/loader/: executable_test.cpp
